# SOIL-wasm

./: .gitignore  BUILD.md  CMakeLists.txt  WASM_BUILD.md  run.sh
.github/workflows/: Ubuntu_build.yml  Wasm_build.yml
docker/: app.env  ubuntu.docker
